<resources>
    <string name="app_name">Kafka Messenger</string>
    <string name="tab_contacts">Contactos</string>
    <string name="tab_chats">Chats</string>
    <string name="chat_placeholder">Mensaje</string>

    <string name="mate_key_placeholder">Inserta aquí la clave de tu amigo</string>
    <string name="mate_alias_placeholder">Alias (opcional)</string>
    <string name="mate_key_alternative_title">O tambén, puedes escanear su código QR</string>
    <string name="mate_key_button">Escanear QR</string>
    <string name="toast_wrong_key">No se ha podido añadir este usuario, comprueba los datos y vuelve a intentarlo</string>
    <string name="toast_okey_key">Usuario añadido correctamente</string>
    <string name="toast_nookey_key">Operación cancelada</string>
    <string name="toolbar_new_contact_title">Nuevo contacto</string>
    <string name="contact_exists">Este usuario ya existe</string>
    <string name="modify_it">Modificarlo</string>
    <string name="cancel_it">Cancelar</string>

    <string name="username_hint">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="credentials_toolbar_title">Autenticación</string>
    <string name="im_new_label">Soy nuevo</string>
    <string name="continue_login">Continuar</string>
    <string name="rejected_registration">El servidor ha rechazado el registro, prueba con otro nombre de usuario</string>
    <string name="successfully_connected">Estas en línea</string>
    <string name="general_error">Ha ocurrido un error:</string>

    <string name="invalid_password_title">Contraseña inválida</string>
    <string name="invalid_username_title">Usuario inválido</string>

    <string name="server_selector_title">Elige un servidor</string>
    <string name="server_selector_ok">Aceptar</string>

    <string name="copy_button">Copiar</string>
    <string name="share_mycode_title">Compartir mi código</string>
    <string name="successfully_copied">Código guardado en el portapapeles</string>
</resources>
