<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_contact_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryLightColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_new_contact_title"
        app:titleTextColor="@color/primaryColor" />

    <EditText
        android:id="@+id/alias_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="AUTOFILL_TYPE_NONE"
        android:background="@drawable/message_input_background"
        android:backgroundTint="@color/primaryLightColor"
        android:ems="10"
        android:gravity="center|start|top"
        android:hint="@string/mate_alias_placeholder"
        android:inputType="textMultiLine"
        android:maxHeight="170dp"
        android:minHeight="20dp"
        android:paddingStart="15dp"
        android:paddingTop="9dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHighlight="@color/secondaryDarkColor"
        android:textColorHint="#C1C1C1"
        android:textColorLink="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_contact_toolbar" />

    <EditText
        android:id="@+id/key_text_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:autofillHints="AUTOFILL_TYPE_NONE"
        android:background="@drawable/message_input_background"
        android:backgroundTint="@color/primaryLightColor"
        android:ems="10"
        android:gravity="center|start|top"
        android:hint="@string/mate_key_placeholder"
        android:inputType="textMultiLine|textNoSuggestions"
        android:maxHeight="170dp"
        android:minHeight="20dp"
        android:paddingStart="15dp"
        android:paddingTop="9dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHighlight="@color/secondaryDarkColor"
        android:textColorHint="#C1C1C1"
        android:textColorLink="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alias_text_input" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/mate_key_alternative_title"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scan_qr_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scan_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="190dp"
        android:background="@color/secondaryLightColor"
        android:foreground="?attr/selectableItemBackground"
        android:foregroundTint="@color/secondaryColor"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/mate_key_button"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_contact_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/secondaryLightColor"
        app:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="25dp"
        app:srcCompat="@drawable/ic_done_24px" />

</androidx.constraintlayout.widget.ConstraintLayout>