<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/credentials_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryLightColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/credentials_toolbar_title"
        app:titleTextColor="@color/secondaryTextColor" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="AUTOFILL_TYPE_NONE"
        android:background="@drawable/message_input_background"
        android:backgroundTint="@color/primaryLightColor"
        android:ems="10"
        android:gravity="center|start|top"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:maxHeight="170dp"
        android:minHeight="20dp"
        android:paddingStart="15dp"
        android:paddingTop="9dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:singleLine="true"
        android:textColor="@color/primaryTextColor"
        android:textColorHighlight="@color/secondaryDarkColor"
        android:textColorHint="#C1C1C1"
        android:textColorLink="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credentials_toolbar" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="AUTOFILL_TYPE_NONE"
        android:background="@drawable/message_input_background"
        android:backgroundTint="@color/primaryLightColor"
        android:ems="10"
        android:gravity="center|start|top"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxHeight="170dp"
        android:minHeight="20dp"
        android:paddingStart="15dp"
        android:paddingTop="9dp"
        android:paddingEnd="15dp"
        android:paddingBottom="11dp"
        android:singleLine="true"
        android:textColor="@color/primaryTextColor"
        android:textColorHighlight="@color/secondaryDarkColor"
        android:textColorHint="#C1C1C1"
        android:textColorLink="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <Button
        android:id="@+id/login_buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="140dp"
        android:background="@color/secondaryLightColor"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/continue_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_checkbox" />

    <CheckBox
        android:id="@+id/register_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:buttonTint="@color/secondaryLightColor"
        android:drawableTint="@color/primaryTextColor"
        android:text="@string/im_new_label"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_selector" />

    <Spinner
        android:id="@+id/server_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/message_input_background"
        android:backgroundTint="@color/primaryLightColor"
        android:entries="@array/server_list"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="9dp"
        android:paddingBottom="9dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <ProgressBar
        android:id="@+id/registration_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/secondaryLightColor"
        android:progressTint="@color/secondaryLightColor"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credentials_toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>